Final Version used for recording and testing

--- a/inventory/templates/inventory/dashboard.html
+++ b/inventory/templates/inventory/dashboard.html
@@ -57,7 +57,7 @@
                     <i class="fas fa-map-marker-alt fa-3x opacity-50"></i>
                 </div>
                 <div class="card-footer bg-info border-top-0">
-                    <a href="#" class="text-white text-decoration-none">View All Locations &raquo;</a>
+                    <a class="nav-link" href="{% url 'view_locations' %}">Locations</a>
                 </div>
             </div>
         </div>
